Src/ansic.output
Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | INC_OP unary_expression
   17                 | DEC_OP unary_expression
   18                 | unary_operator cast_expression
   19                 | SIZEOF unary_expression
   20                 | SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression
   28                | '(' type_name ')' cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression '*' cast_expression
   31                          | multiplicative_expression '/' cast_expression
   32                          | multiplicative_expression '%' cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression '+' multiplicative_expression
   35                    | additive_expression '-' multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_OP additive_expression
   38                 | shift_expression RIGHT_OP additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression '<' shift_expression
   41                      | relational_expression '>' shift_expression
   42                      | relational_expression LE_OP shift_expression
   43                      | relational_expression GE_OP shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OP relational_expression
   46                    | equality_expression NE_OP relational_expression

   47 and_expression: equality_expression
   48               | and_expression '&' equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression '^' and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression '|' exclusive_or_expression

   53 N: ε

   54 logical_and_expression: inclusive_or_expression
   55                       | logical_and_expression AND_OP N inclusive_or_expression

   56 logical_or_expression: logical_and_expression
   57                      | logical_or_expression OR_OP N logical_and_expression

   58 M: ε

   59 conditional_expression: logical_or_expression

   60 $@1: ε

   61 $@2: ε

   62 conditional_expression: logical_or_expression $@1 '?' N expression ':' $@2 M N conditional_expression

   63 assignment_expression: conditional_expression
   64                      | unary_expression assignment_operator assignment_expression

   65 assignment_operator: '='
   66                    | MUL_ASSIGN
   67                    | DIV_ASSIGN
   68                    | MOD_ASSIGN
   69                    | ADD_ASSIGN
   70                    | SUB_ASSIGN
   71                    | LEFT_ASSIGN
   72                    | RIGHT_ASSIGN
   73                    | AND_ASSIGN
   74                    | XOR_ASSIGN
   75                    | OR_ASSIGN

   76 expression: assignment_expression
   77           | expression ',' assignment_expression

   78 constant_expression: conditional_expression

   79 declaration: declaration_specifiers ';'
   80            | declaration_specifiers init_declarator_list ';'

   81 declaration_specifiers: storage_class_specifier
   82                       | storage_class_specifier declaration_specifiers
   83                       | type_specifier
   84                       | type_specifier declaration_specifiers
   85                       | type_qualifier
   86                       | type_qualifier declaration_specifiers

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list ',' init_declarator

   89 init_declarator: declarator
   90                | declarator '=' initializer

   91 storage_class_specifier: TYPEDEF
   92                        | EXTERN
   93                        | STATIC
   94                        | AUTO
   95                        | REGISTER

   96 type_specifier: VOID
   97               | CHAR
   98               | SHORT
   99               | INT
  100               | LONG
  101               | FLOAT
  102               | DOUBLE
  103               | SIGNED
  104               | UNSIGNED
  105               | struct_or_union_specifier
  106               | enum_specifier
  107               | TYPE_NAME

  108 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  109                          | struct_or_union '{' struct_declaration_list '}'
  110                          | struct_or_union IDENTIFIER

  111 struct_or_union: STRUCT
  112                | UNION

  113 struct_declaration_list: struct_declaration
  114                        | struct_declaration_list struct_declaration

  115 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  116 specifier_qualifier_list: type_specifier specifier_qualifier_list
  117                         | type_specifier
  118                         | type_qualifier specifier_qualifier_list
  119                         | type_qualifier

  120 struct_declarator_list: struct_declarator
  121                       | struct_declarator_list ',' struct_declarator

  122 struct_declarator: declarator
  123                  | ':' constant_expression
  124                  | declarator ':' constant_expression

  125 enum_specifier: ENUM '{' enumerator_list '}'
  126               | ENUM IDENTIFIER '{' enumerator_list '}'
  127               | ENUM IDENTIFIER

  128 enumerator_list: enumerator
  129                | enumerator_list ',' enumerator

  130 enumerator: IDENTIFIER
  131           | IDENTIFIER '=' constant_expression

  132 type_qualifier: CONST
  133               | VOLATILE

  134 declarator: pointer direct_declarator
  135           | direct_declarator

  136 direct_declarator: IDENTIFIER
  137                  | '(' declarator ')'
  138                  | direct_declarator '[' constant_expression ']'
  139                  | direct_declarator '[' ']'
  140                  | direct_declarator '(' parameter_type_list ')'
  141                  | direct_declarator '(' identifier_list ')'
  142                  | direct_declarator '(' ')'

  143 pointer: '*'
  144        | '*' type_qualifier_list
  145        | '*' pointer
  146        | '*' type_qualifier_list pointer

  147 type_qualifier_list: type_qualifier
  148                    | type_qualifier_list type_qualifier

  149 parameter_type_list: parameter_list
  150                    | parameter_list ',' ELLIPSIS

  151 parameter_list: parameter_declaration
  152               | parameter_list ',' parameter_declaration

  153 parameter_declaration: declaration_specifiers declarator
  154                      | declaration_specifiers abstract_declarator
  155                      | declaration_specifiers

  156 identifier_list: IDENTIFIER
  157                | identifier_list ',' IDENTIFIER

  158 type_name: specifier_qualifier_list
  159          | specifier_qualifier_list abstract_declarator

  160 abstract_declarator: pointer
  161                    | direct_abstract_declarator
  162                    | pointer direct_abstract_declarator

  163 direct_abstract_declarator: '(' abstract_declarator ')'
  164                           | '[' ']'
  165                           | '[' constant_expression ']'
  166                           | direct_abstract_declarator '[' ']'
  167                           | direct_abstract_declarator '[' constant_expression ']'
  168                           | '(' ')'
  169                           | '(' parameter_type_list ')'
  170                           | direct_abstract_declarator '(' ')'
  171                           | direct_abstract_declarator '(' parameter_type_list ')'

  172 initializer: assignment_expression
  173            | '{' initializer_list '}'
  174            | '{' initializer_list ',' '}'

  175 initializer_list: initializer
  176                 | initializer_list ',' initializer

  177 P: ε

  178 statement: labeled_statement

  179 $@3: ε

  180 statement: P $@3 compound_statement
  181          | expression_statement
  182          | selection_statement
  183          | iteration_statement
  184          | jump_statement

  185 labeled_statement: IDENTIFIER ':' N statement
  186                  | CASE constant_expression ':' N statement
  187                  | DEFAULT ':' N statement

  188 compound_statement: '{' '}'
  189                   | '{' statement_list '}'
  190                   | '{' declaration_list '}'
  191                   | '{' declaration_list statement_list '}'

  192 declaration_list: declaration
  193                 | declaration_list declaration

  194 statement_list: statement
  195               | statement_list N statement

  196 expression_statement: ';'
  197                     | expression ';'

  198 logic_expression: expression

  199 selection_statement: IF '(' logic_expression ')' N statement
  200                    | IF '(' logic_expression ')' N statement ELSE M N statement
  201                    | SWITCH '(' expression ')' M statement

  202 logic_expression_statement: expression_statement

  203 iteration_statement: WHILE N '(' logic_expression ')' N statement
  204                    | DO N statement WHILE N '(' logic_expression ')' ';'
  205                    | FOR '(' expression_statement N logic_expression_statement N ')' statement
  206                    | FOR '(' expression_statement N expression_statement N expression ')' M N statement

  207 jump_statement: GOTO IDENTIFIER ';'
  208               | CONTINUE ';'
  209               | BREAK ';'
  210               | RETURN ';'
  211               | RETURN expression ';'

  212 translation_unit: external_declaration
  213                 | translation_unit external_declaration

  214 external_declaration: function_definition
  215                     | declaration

  216 function_definition: declaration_specifiers declarator declaration_list compound_statement

  217 $@4: ε

  218 function_definition: declaration_specifiers declarator $@4 compound_statement
  219                    | declarator declaration_list compound_statement

  220 $@5: ε

  221 function_definition: declarator $@5 compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 26
    '%' (37) 32
    '&' (38) 21 48
    '(' (40) 4 7 8 20 28 137 140 141 142 163 168 169 170 171 199 200 201 203 204 205 206
    ')' (41) 4 7 8 20 28 137 140 141 142 163 168 169 170 171 199 200 201 203 204 205 206
    '*' (42) 22 30 143 144 145 146
    '+' (43) 23 34
    ',' (44) 14 77 88 121 129 150 152 157 174 176
    '-' (45) 24 35
    '.' (46) 9
    '/' (47) 31
    ':' (58) 62 123 124 185 186 187
    ';' (59) 79 80 115 196 197 204 207 208 209 210 211
    '<' (60) 40
    '=' (61) 65 90 131
    '>' (62) 41
    '?' (63) 62
    '[' (91) 6 138 139 164 165 166 167
    ']' (93) 6 138 139 164 165 166 167
    '^' (94) 50
    '{' (123) 108 109 125 126 173 174 188 189 190 191
    '|' (124) 52
    '}' (125) 108 109 125 126 173 174 188 189 190 191
    '~' (126) 25
    error (256)
    IDENTIFIER <name> (258) 1 9 10 108 110 126 127 130 131 136 156 157 185 207
    CONSTANT <name> (259) 2
    STRING_LITERAL <sval> (260) 3
    SIZEOF <sval> (261) 19 20
    PTR_OP (262) 10
    INC_OP (263) 11 16
    DEC_OP (264) 12 17
    LEFT_OP (265) 37
    RIGHT_OP (266) 38
    LE_OP (267) 42
    GE_OP (268) 43
    EQ_OP (269) 45
    NE_OP (270) 46
    AND_OP (271) 55
    OR_OP (272) 57
    MUL_ASSIGN (273) 66
    DIV_ASSIGN (274) 67
    MOD_ASSIGN (275) 68
    ADD_ASSIGN (276) 69
    SUB_ASSIGN (277) 70
    LEFT_ASSIGN (278) 71
    RIGHT_ASSIGN (279) 72
    AND_ASSIGN (280) 73
    XOR_ASSIGN (281) 74
    OR_ASSIGN (282) 75
    TYPE_NAME (283) 107
    TYPEDEF (284) 91
    EXTERN (285) 92
    STATIC (286) 93
    AUTO (287) 94
    REGISTER (288) 95
    CHAR (289) 97
    SHORT (290) 98
    INT (291) 99
    LONG (292) 100
    SIGNED (293) 103
    UNSIGNED (294) 104
    FLOAT (295) 101
    DOUBLE (296) 102
    CONST (297) 132
    VOLATILE (298) 133
    VOID (299) 96
    STRUCT (300) 111
    UNION (301) 112
    ENUM (302) 125 126 127
    ELLIPSIS (303) 150
    CASE (304) 186
    DEFAULT (305) 187
    IF (306) 199 200
    ELSE (307) 200
    SWITCH (308) 201
    WHILE (309) 203 204
    DO (310) 204
    FOR (311) 205 206
    GOTO (312) 207
    CONTINUE (313) 208
    BREAK (314) 209
    RETURN (315) 210 211
    NOELSE (316)


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    primary_expression <sym> (87)
        on left: 1 2 3 4
        on right: 5
    postfix_expression <sym> (88)
        on left: 5 6 7 8 9 10 11 12
        on right: 6 7 8 9 10 11 12 15
    argument_expression_list <sym> (89)
        on left: 13 14
        on right: 8 14
    unary_expression <sym> (90)
        on left: 15 16 17 18 19 20
        on right: 16 17 19 27 64
    unary_operator <op> (91)
        on left: 21 22 23 24 25 26
        on right: 18
    cast_expression <sym> (92)
        on left: 27 28
        on right: 18 28 29 30 31 32
    multiplicative_expression <sym> (93)
        on left: 29 30 31 32
        on right: 30 31 32 33 34 35
    additive_expression <sym> (94)
        on left: 33 34 35
        on right: 34 35 36 37 38
    shift_expression <sym> (95)
        on left: 36 37 38
        on right: 37 38 39 40 41 42 43
    relational_expression <sym> (96)
        on left: 39 40 41 42 43
        on right: 40 41 42 43 44 45 46
    equality_expression <sym> (97)
        on left: 44 45 46
        on right: 45 46 47 48
    and_expression <sym> (98)
        on left: 47 48
        on right: 48 49 50
    exclusive_or_expression <sym> (99)
        on left: 49 50
        on right: 50 51 52
    inclusive_or_expression <sym> (100)
        on left: 51 52
        on right: 52 54 55
    N <instr> (101)
        on left: 53
        on right: 55 57 62 185 186 187 195 199 200 203 204 205 206
    logical_and_expression <sym> (102)
        on left: 54 55
        on right: 55 56 57
    logical_or_expression <sym> (103)
        on left: 56 57
        on right: 57 59 62
    M <lists> (104)
        on left: 58
        on right: 62 200 201 206
    conditional_expression <sym> (105)
        on left: 59 62
        on right: 62 63 78
    $@1 (106)
        on left: 60
        on right: 62
    $@2 (107)
        on left: 61
        on right: 62
    assignment_expression <sym> (108)
        on left: 63 64
        on right: 13 14 64 76 77 172
    assignment_operator <asop> (109)
        on left: 65 66 67 68 69 70 71 72 73 74 75
        on right: 64
    expression <sym> (110)
        on left: 76 77
        on right: 4 6 62 77 197 198 201 206 211
    constant_expression <sym> (111)
        on left: 78
        on right: 123 124 131 138 165 167 186
    declaration (112)
        on left: 79 80
        on right: 192 193 215
    declaration_specifiers <splist> (113)
        on left: 81 82 83 84 85 86
        on right: 79 80 82 84 86 153 154 155 216 218
    init_declarator_list <idlist> (114)
        on left: 87 88
        on right: 80 88
    init_declarator <id_data> (115)
        on left: 89 90
        on right: 87 88
    storage_class_specifier <scsp> (116)
        on left: 91 92 93 94 95
        on right: 81 82
    type_specifier <typesp> (117)
        on left: 96 97 98 99 100 101 102 103 104 105 106 107
        on right: 83 84 116 117
    struct_or_union_specifier (118)
        on left: 108 109 110
        on right: 105
    struct_or_union (119)
        on left: 111 112
        on right: 108 109 110
    struct_declaration_list (120)
        on left: 113 114
        on right: 108 109 114
    struct_declaration (121)
        on left: 115
        on right: 113 114
    specifier_qualifier_list <sqlist> (122)
        on left: 116 117 118 119
        on right: 115 116 118 158 159
    struct_declarator_list (123)
        on left: 120 121
        on right: 115 121
    struct_declarator (124)
        on left: 122 123 124
        on right: 120 121
    enum_specifier (125)
        on left: 125 126 127
        on right: 106
    enumerator_list (126)
        on left: 128 129
        on right: 125 126 129
    enumerator (127)
        on left: 130 131
        on right: 128 129
    type_qualifier <typeq> (128)
        on left: 132 133
        on right: 85 86 118 119 147 148
    declarator <id_data> (129)
        on left: 134 135
        on right: 89 90 122 124 137 153 216 218 219 221
    direct_declarator <id_data> (130)
        on left: 136 137 138 139 140 141 142
        on right: 134 135 138 139 140 141 142
    pointer <pstruct> (131)
        on left: 143 144 145 146
        on right: 134 145 146 160 162
    type_qualifier_list <splist> (132)
        on left: 147 148
        on right: 144 146 148
    parameter_type_list <idlist> (133)
        on left: 149 150
        on right: 140 169 171
    parameter_list <idlist> (134)
        on left: 151 152
        on right: 149 150 152
    parameter_declaration <sym> (135)
        on left: 153 154 155
        on right: 151 152
    identifier_list <symlist> (136)
        on left: 156 157
        on right: 141 157
    type_name <typ> (137)
        on left: 158 159
        on right: 20 28
    abstract_declarator (138)
        on left: 160 161 162
        on right: 154 159 163
    direct_abstract_declarator (139)
        on left: 163 164 165 166 167 168 169 170 171
        on right: 161 162 166 167 170 171
    initializer <sym> (140)
        on left: 172 173 174
        on right: 90 175 176
    initializer_list (141)
        on left: 175 176
        on right: 173 174 176
    P (142)
        on left: 177
        on right: 180
    statement <lists> (143)
        on left: 178 180 181 182 183 184
        on right: 185 186 187 194 195 199 200 201 203 204 205 206
    $@3 (144)
        on left: 179
        on right: 180
    labeled_statement <lists> (145)
        on left: 185 186 187
        on right: 178
    compound_statement <lists> (146)
        on left: 188 189 190 191
        on right: 180 216 218 219 221
    declaration_list (147)
        on left: 192 193
        on right: 190 191 193 216 219
    statement_list <lists> (148)
        on left: 194 195
        on right: 189 191 195
    expression_statement <sym> (149)
        on left: 196 197
        on right: 181 202 205 206
    logic_expression <sym> (150)
        on left: 198
        on right: 199 200 203 204
    selection_statement <lists> (151)
        on left: 199 200 201
        on right: 182
    logic_expression_statement <sym> (152)
        on left: 202
        on right: 205
    iteration_statement <lists> (153)
        on left: 203 204 205 206
        on right: 183
    jump_statement <lists> (154)
        on left: 207 208 209 210 211
        on right: 184
    translation_unit (155)
        on left: 212 213
        on right: 0 213
    external_declaration (156)
        on left: 214 215
        on right: 212 213
    function_definition (157)
        on left: 216 218 219 221
        on right: 214
    $@4 (158)
        on left: 217
        on right: 218
    $@5 (159)
        on left: 220
        on right: 221


State 0

    0 $accept: • translation_unit $end
   79 declaration: • declaration_specifiers ';'
   80            | • declaration_specifiers init_declarator_list ';'
   81 declaration_specifiers: • storage_class_specifier
   82                       | • storage_class_specifier declaration_specifiers
   83                       | • type_specifier
   84                       | • type_specifier declaration_specifiers
   85                       | • type_qualifier
   86                       | • type_qualifier declaration_specifiers
   91 storage_class_specifier: • TYPEDEF
   92                        | • EXTERN
   93                        | • STATIC
   94                        | • AUTO
   95                        | • REGISTER
   96 type_specifier: • VOID
   97               | • CHAR
   98               | • SHORT
   99               | • INT
  100               | • LONG
  101               | • FLOAT
  102               | • DOUBLE
  103               | • SIGNED
  104               | • UNSIGNED
  105               | • struct_or_union_specifier
  106               | • enum_specifier
  107               | • TYPE_NAME
  108 struct_or_union_specifier: • struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  109                          | • struct_or_union '{' struct_declaration_list '}'
  110                          | • struct_or_union IDENTIFIER
  111 struct_or_union: • STRUCT
  112                | • UNION
  125 enum_specifier: • ENUM '{' enumerator_list '}'
  126               | • ENUM IDENTIFIER '{' enumerator_list '}'
  127               | • ENUM IDENTIFIER
  132 type_qualifier: • CONST
  133               | • VOLATILE
  134 declarator: • pointer direct_declarator
  135           | • direct_declarator
  136 direct_declarator: • IDENTIFIER
  137                  | • '(' declarator ')'
  138                  | • direct_declarator '[' constant_expression ']'
  139                  | • direct_declarator '[' ']'
  140                  | • direct_declarator '(' parameter_type_list ')'
  141                  | • direct_declarator '(' identifier_list ')'
  142                  | • direct_declarator '(' ')'
  143 pointer: • '*'
  144        | • '*' type_qualifier_list
  145        | • '*' pointer
  146        | • '*' type_qualifier_list pointer
  212 translation_unit: • external_declaration
  213                 | • translation_unit external_declaration
  214 external_declaration: • function_definition
  215                     | • declaration
  216 function_definition: • declaration_specifiers declarator declaration_list compound_statement
  218                    | • declaration_specifiers declarator $@4 compound_statement
  219                    | • declarator declaration_list compound_statement
  221                    | • declarator $@5 compound_statement

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37


State 1

  136 direct_declarator: IDENTIFIER •

    $default  reduce using rule 136 (direct_declarator)


State 2

  107 type_specifier: TYPE_NAME •

    $default  reduce using rule 107 (type_specifier)


State 3

   91 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 91 (storage_class_specifier)


State 4

   92 storage_class_specifier: EXTERN •

    $default  reduce using rule 92 (storage_class_specifier)


State 5

   93 storage_class_specifier: STATIC •

    $default  reduce using rule 93 (storage_class_specifier)


State 6

   94 storage_class_specifier: AUTO •

    $default  reduce using rule 94 (storage_class_specifier)


State 7

   95 storage_class_specifier: REGISTER •

    $default  reduce using rule 95 (storage_class_specifier)


State 8

   97 type_specifier: CHAR •

    $default  reduce using rule 97 (type_specifier)


State 9

   98 type_specifier: SHORT •

    $default  reduce using rule 98 (type_specifier)


State 10

   99 type_specifier: INT •

    $default  reduce using rule 99 (type_specifier)


State 11

  100 type_specifier: LONG •

    $default  reduce using rule 100 (type_specifier)


State 12

  103 type_specifier: SIGNED •

    $default  reduce using rule 103 (type_specifier)


State 13

  104 type_specifier: UNSIGNED •

    $default  reduce using rule 104 (type_specifier)


State 14

  101 type_specifier: FLOAT •

    $default  reduce using rule 101 (type_specifier)


State 15

  102 type_specifier: DOUBLE •

    $default  reduce using rule 102 (type_specifier)


State 16

  132 type_qualifier: CONST •

    $default  reduce using rule 132 (type_qualifier)


State 17

  133 type_qualifier: VOLATILE •

    $default  reduce using rule 133 (type_qualifier)


State 18

   96 type_specifier: VOID •

    $default  reduce using rule 96 (type_specifier)


State 19

  111 struct_or_union: STRUCT •

    $default  reduce using rule 111 (struct_or_union)


State 20

  112 struct_or_union: UNION •

    $default  reduce using rule 112 (struct_or_union)


State 21

  125 enum_specifier: ENUM • '{' enumerator_list '}'
  126               | ENUM • IDENTIFIER '{' enumerator_list '}'
  127               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


State 22

  134 declarator: • pointer direct_declarator
  135           | • direct_declarator
  136 direct_declarator: • IDENTIFIER
  137                  | • '(' declarator ')'
  137                  | '(' • declarator ')'
  138                  | • direct_declarator '[' constant_expression ']'
  139                  | • direct_declarator '[' ']'
  140                  | • direct_declarator '(' parameter_type_list ')'
  141                  | • direct_declarator '(' identifier_list ')'
  142                  | • direct_declarator '(' ')'
  143 pointer: • '*'
  144        | • '*' type_qualifier_list
  145        | • '*' pointer
  146        | • '*' type_qualifier_list pointer

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declarator         go to state 40
    direct_declarator  go to state 33
    pointer            go to state 34


State 23

  132 type_qualifier: • CONST
  133               | • VOLATILE
  143 pointer: • '*'
  143        | '*' •  [IDENTIFIER, '(', ')', '[', ',']
  144        | • '*' type_qualifier_list
  144        | '*' • type_qualifier_list
  145        | • '*' pointer
  145        | '*' • pointer
  146        | • '*' type_qualifier_list pointer
  146        | '*' • type_qualifier_list pointer
  147 type_qualifier_list: • type_qualifier
  148                    | • type_qualifier_list type_qualifier

    CONST     shift, and go to state 16
    VOLATILE  shift, and go to state 17
    '*'       shift, and go to state 23

    $default  reduce using rule 143 (pointer)

    type_qualifier       go to state 41
    pointer              go to state 42
    type_qualifier_list  go to state 43


State 24

  215 external_declaration: declaration •

    $default  reduce using rule 215 (external_declaration)


State 25

   79 declaration: declaration_specifiers • ';'
   80            | declaration_specifiers • init_declarator_list ';'
   87 init_declarator_list: • init_declarator
   88                     | • init_declarator_list ',' init_declarator
   89 init_declarator: • declarator
   90                | • declarator '=' initializer
  134 declarator: • pointer direct_declarator
  135           | • direct_declarator
  136 direct_declarator: • IDENTIFIER
  137                  | • '(' declarator ')'
  138                  | • direct_declarator '[' constant_expression ']'
  139                  | • direct_declarator '[' ']'
  140                  | • direct_declarator '(' parameter_type_list ')'
  141                  | • direct_declarator '(' identifier_list ')'
  142                  | • direct_declarator '(' ')'
  143 pointer: • '*'
  144        | • '*' type_qualifier_list
  145        | • '*' pointer
  146        | • '*' type_qualifier_list pointer
  216 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  218                    | declaration_specifiers • declarator $@4 compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23
    ';'         shift, and go to state 44

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 33
    pointer               go to state 34


State 26

   81 declaration_specifiers: • storage_class_specifier
   81                       | storage_class_specifier •  [IDENTIFIER, '(', ')', '[', ',', '*', ';']
   82                       | • storage_class_specifier declaration_specifiers
   82                       | storage_class_specifier • declaration_specifiers
   83                       | • type_specifier
   84                       | • type_specifier declaration_specifiers
   85                       | • type_qualifier
   86                       | • type_qualifier declaration_specifiers
   91 storage_class_specifier: • TYPEDEF
   92                        | • EXTERN
   93                        | • STATIC
   94                        | • AUTO
   95                        | • REGISTER
   96 type_specifier: • VOID
   97               | • CHAR
   98               | • SHORT
   99               | • INT
  100               | • LONG
  101               | • FLOAT
  102               | • DOUBLE
  103               | • SIGNED
  104               | • UNSIGNED
  105               | • struct_or_union_specifier
  106               | • enum_specifier
  107               | • TYPE_NAME
  108 struct_or_union_specifier: • struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  109                          | • struct_or_union '{' struct_declaration_list '}'
  110                          | • struct_or_union IDENTIFIER
  111 struct_or_union: • STRUCT
  112                | • UNION
  125 enum_specifier: • ENUM '{' enumerator_list '}'
  126               | • ENUM IDENTIFIER '{' enumerator_list '}'
  127               | • ENUM IDENTIFIER
  132 type_qualifier: • CONST
  133               | • VOLATILE

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 27

   81 declaration_specifiers: • storage_class_specifier
   82                       | • storage_class_specifier declaration_specifiers
   83                       | • type_specifier
   83                       | type_specifier •  [IDENTIFIER, '(', ')', '[', ',', '*', ';']
   84                       | • type_specifier declaration_specifiers
   84                       | type_specifier • declaration_specifiers
   85                       | • type_qualifier
   86                       | • type_qualifier declaration_specifiers
   91 storage_class_specifier: • TYPEDEF
   92                        | • EXTERN
   93                        | • STATIC
   94                        | • AUTO
   95                        | • REGISTER
   96 type_specifier: • VOID
   97               | • CHAR
   98               | • SHORT
   99               | • INT
  100               | • LONG
  101               | • FLOAT
  102               | • DOUBLE
  103               | • SIGNED
  104               | • UNSIGNED
  105               | • struct_or_union_specifier
  106               | • enum_specifier
  107               | • TYPE_NAME
  108 struct_or_union_specifier: • struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  109                          | • struct_or_union '{' struct_declaration_list '}'
  110                          | • struct_or_union IDENTIFIER
  111 struct_or_union: • STRUCT
  112                | • UNION
  125 enum_specifier: • ENUM '{' enumerator_list '}'
  126               | • ENUM IDENTIFIER '{' enumerator_list '}'
  127               | • ENUM IDENTIFIER
  132 type_qualifier: • CONST
  133               | • VOLATILE

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 28

  105 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 105 (type_specifier)


State 29

  108 struct_or_union_specifier: struct_or_union • IDENTIFIER '{' struct_declaration_list '}'
  109                          | struct_or_union • '{' struct_declaration_list '}'
  110                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 50
    '{'         shift, and go to state 51


State 30

  106 type_specifier: enum_specifier •

    $default  reduce using rule 106 (type_specifier)


State 31

   81 declaration_specifiers: • storage_class_specifier
   82                       | • storage_class_specifier declaration_specifiers
   83                       | • type_specifier
   84                       | • type_specifier declaration_specifiers
   85                       | • type_qualifier
   85                       | type_qualifier •  [IDENTIFIER, '(', ')', '[', ',', '*', ';']
   86                       | • type_qualifier declaration_specifiers
   86                       | type_qualifier • declaration_specifiers
   91 storage_class_specifier: • TYPEDEF
   92                        | • EXTERN
   93                        | • STATIC
   94                        | • AUTO
   95                        | • REGISTER
   96 type_specifier: • VOID
   97               | • CHAR
   98               | • SHORT
   99               | • INT
  100               | • LONG
  101               | • FLOAT
  102               | • DOUBLE
  103               | • SIGNED
  104               | • UNSIGNED
  105               | • struct_or_union_specifier
  106               | • enum_specifier
  107               | • TYPE_NAME
  108 struct_or_union_specifier: • struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  109                          | • struct_or_union '{' struct_declaration_list '}'
  110                          | • struct_or_union IDENTIFIER
  111 struct_or_union: • STRUCT
  112                | • UNION
  125 enum_specifier: • ENUM '{' enumerator_list '}'
  126               | • ENUM IDENTIFIER '{' enumerator_list '}'
  127               | • ENUM IDENTIFIER
  132 type_qualifier: • CONST
  133               | • VOLATILE
